--- a/calculator.css
+++ b/calculator.css
@@ -1,25 +1,28 @@
-.container{
+.container {
     width: 500px;
     height: 500px;
     margin: auto;
-
 }
-.calculator{
+
+.calculator {
     width: 68%;
     margin: auto;
     background-color: #fc3b3b;
     height: auto;
     border-radius: 10px;
-
 }
-.display{
+
+.display {
     width: 100%;
     background-color: #474745;
     height: 90px;
     text-align: right;
     font-size: 25px;
     color: white;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 }
+
 .operation {
     height: 70px;
     background-color: white;
@@ -34,17 +37,20 @@
     padding-top: 5px;
     padding-bottom: 10px;
 }
-.parent{
+
+.parent {
     height: 350px;
     display: flex;
 }
-.number{
+
+.number {
     width: 77%;
     background-color: #ffffff;
     display: flex;
     flex-wrap: wrap;
 }
-.buttonNumber{
+
+.buttonNumber {
     width: 32.5%;
     border: 1px solid black;
     text-align: center;
@@ -52,9 +58,11 @@
     padding-top: 20px;
     padding-bottom: 20px;
 }
-.buttonNumber:hover{
+
+.buttonNumber:hover {
     background-color: indianred;
 }
+
 .buttonClear {
     width: 32.5%;
     border: 1px solid black;
@@ -63,9 +71,10 @@
     padding-top: 15px;
     padding-bottom: 15px;
 }
-.equal{
+
+.equal {
     width: 25%;
-    background-color:rgb(247, 114, 66);
+    background-color: rgb(247, 114, 66);
     display: flex;
     justify-content: center;
     align-items: center;
